--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressful-tools",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "author": "Jeroen Ransijn (http://jeroenransijn.nl/)",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "config": "^1.21.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
