--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressful-tools",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "config": "^1.21.0",
+    "cssnano": "^3.7.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-nodemon": "^2.1.0",
@@ -21,6 +22,9 @@
     "gulp-util": "^3.0.7",
     "minimatch": "^3.0.2",
     "postcss": "^5.1.0",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-import": "^8.1.2",
     "stylefmt": "^4.1.1"
   }
 }
