--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "expressful-tools",
-  "version": "0.0.4",
+  "name": "run-dev",
+  "version": "0.0.5",
   "description": "",
   "main": "index.js",
   "bin": {
