--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   "author": "Jeroen Ransijn (http://jeroenransijn.nl/)",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
     "config": "^1.21.0",
     "cross-spawn": "^4.0.0",
     "cssnano": "^3.7.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-nodemon": "^2.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
+    "nodemon": "^1.9.2",
     "postcss": "^5.1.0",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.7.0",
