--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "expressful-tools",
+  "name": "expressful-scripts",
   "version": "0.0.6",
   "description": "",
   "main": "index.js",
   "bin": {
-    "expressful-tools": "./bin/expressful-tools.js"
+    "expressful-scripts": "./bin/expressful-scripts.js"
   },
   "author": "Jeroen Ransijn (http://jeroenransijn.nl/)",
   "license": "MIT",
@@ -28,6 +28,7 @@
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^8.1.2",
-    "stylefmt": "^4.1.1"
+    "stylefmt": "^4.1.1",
+    "fs-extra": "0.30.0"
   }
 }
