replaced react-scripts

--- a/global-cli/package.json
+++ b/global-cli/package.json
@@ -2,7 +2,7 @@
   "name": "create-expressful-app",
   "version": "0.0.1",
   "keywords": [
-    "react"
+    "expressful"
   ],
   "description": "Create Expressful apps with no build configuration.",
   "license": "MIT",
