--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressful-scripts",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Build by convention tools for Expressful",
   "bin": {
     "expressful-scripts": "./bin/expressful-scripts.js"
@@ -28,9 +28,14 @@
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^8.1.2",
     "stylefmt": "^4.1.1",
-    "fs-extra": "0.30.0"
+    "fs-extra": "0.30.0",
+    "eslint": "3.1.1",
+    "eslint-loader": "1.4.1",
+    "eslint-plugin-import": "1.10.3",
+    "eslint-plugin-jsx-a11y": "2.0.1",
+    "eslint-plugin-react": "5.2.2"
   },
   "devDependencies": {
-    "expressful": "^0.3.2"
+    "expressful": "0.3.3"
   }
 }
