--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
   "author": "Jeroen Ransijn (http://jeroenransijn.nl/)",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "config": "^1.21.0",
     "cross-spawn": "^4.0.0",
     "cssnano": "^3.7.3",
+    "eslint": "3.1.1",
+    "eslint-loader": "1.4.1",
+    "eslint-plugin-import": "1.10.3",
+    "eslint-plugin-jsx-a11y": "2.0.1",
+    "eslint-plugin-react": "5.2.2",
+    "fs-extra": "0.30.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.1.0",
@@ -27,13 +34,7 @@
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^8.1.2",
-    "stylefmt": "^4.1.1",
-    "fs-extra": "0.30.0",
-    "eslint": "3.1.1",
-    "eslint-loader": "1.4.1",
-    "eslint-plugin-import": "1.10.3",
-    "eslint-plugin-jsx-a11y": "2.0.1",
-    "eslint-plugin-react": "5.2.2"
+    "stylefmt": "^4.1.1"
   },
   "devDependencies": {
     "expressful": "0.3.5"
