--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressful-scripts",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "Build by convention tools for Expressful",
   "bin": {
     "expressful-scripts": "./bin/expressful-scripts.js"
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "config": "^1.21.0",
