--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressful-scripts",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "Build by convention tools for Expressful",
   "bin": {
     "expressful-scripts": "./bin/expressful-scripts.js"
@@ -8,11 +8,15 @@
   "author": "Jeroen Ransijn (http://jeroenransijn.nl/)",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "concurrently": "^2.2.0",
     "config": "^1.21.0",
     "cross-spawn": "^4.0.0",
     "cssnano": "^3.7.3",
@@ -23,11 +27,13 @@
     "eslint-plugin-react": "5.2.2",
     "fs-extra": "0.30.0",
     "gulp": "^3.9.1",
+    "gulp-buffer": "0.0.2",
     "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-tap": "^0.1.3",
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "nodemon": "^1.9.2",
@@ -35,7 +41,9 @@
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^8.1.2",
-    "stylefmt": "^4.1.1"
+    "stylefmt": "^4.1.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "expressful": "0.3.6"
