--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressful-scripts",
-  "version": "0.0.30",
+  "version": "0.0.31",
   "description": "Build by convention tools for Expressful",
   "bin": {
     "expressful-scripts": "./bin/expressful-scripts.js"
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "1.10.3",
     "eslint-plugin-jsx-a11y": "2.0.1",
     "eslint-plugin-react": "5.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fs-extra": "0.30.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
