--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
     "postcss-reporter": "^1.4.1",
+    "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
     "stylefmt": "^4.1.1",
     "webpack": "^1.13.1",
