--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-spawn": "^4.0.0",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
+    "download-git-repo": "^0.1.2",
     "editorconfig": "^0.13.2",
     "eslint": "3.1.1",
     "eslint-loader": "1.4.1",
